@@ -1,0 +1,2 @@
+# Add your custom default settings below
+adminRealName = John Wayne
