@@ -59,6 +59,7 @@ class WizardLicenseAgreement extends HTML_QuickForm_Page
         $this->setDefaults(array(
             'license' => $licenseTxt,
             ));
+        $this->setDefaults(overrideDefaultInstallSettings());
 
         $this->addElement('header',     null, 'Seagull License Agreement: page 1 of 5');
         $this->addElement('textarea',   'license', null, array('rows' => 15, 'cols' => 80));
