@@ -1,0 +1,18 @@
+<?php
+
+$aSections = array(
+
+// anonymous
+    array (
+      'title'           => 'Contact Us',
+      'parent_id'       => SGL_NODE_USER,
+      'uriType'         => 'dynamic',
+      'module'          => 'contactus',
+      'manager'         => 'ContactUsMgr.php',
+      'actionMapping'   => '',
+      'add_params'      => '',
+      'is_enabled'      => 1,
+      'perms'           => SGL_GUEST,
+        ),
+    );
+?>
